Lago-K8S/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/service: api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/network: lago-default
        app.kubernetes.io/service: api
    spec:
      containers:
        - args:
            - ./scripts/start.sh
          image: getlago/api:v0.40.0-beta
          name: lago-api
          ports:
            - containerPort: 3000
          resources: {}
          volumeMounts:
            - mountPath: /app/storage
              name: lago-storage-data
      restartPolicy: Always
      volumes:
        - name: lago-storage-data
          persistentVolumeClaim:
            claimName: lago-storage-data
status: {}
