Lago-K8S/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/service: lago-api
  name: lago-api
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    app.kubernetes.io/service: lago-api
